--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs": "0.0.1-security",
     "node.js": "0.0.1-security",
     "officegen": "^0.6.4",
-    "path":"^0.12.7"
+    "path":"^0.12.7", 
+    "mysql2":"^3.3.1"
   }
 }
